crates/compiler/src/tests/e2e/bad/0023_missing_trait_bound/main.gom
trait Printable {
  fn print_it(Self) -> unit;
}

fn show_all[T: Printable](items: Vec[T]) -> unit {
  ()
}

struct Raw {
  data: int32,
}

fn main() -> unit {
  let items = Vec::new();
  let items = items.push(Raw { data: 42 });
  show_all(items)
}
